fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking__c/New_Product_Tracking__c.object-meta.xml
<CustomObject>
    <label>New Product Tracking</label>
    <nameField>
        <label>New Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Product Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>