fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(
TODAY() &gt;= Start_Date__c, 
TODAY() &lt;= End_Date__c,
Exception__c = FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Active requests that &apos;Today&apos; be between the start and end dates and that the &apos;Exception&apos; field is not checked.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>