fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking__c/fields/Activity_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Task_Type__c</fullName>
    <inlineHelpText>Used to associated the NPT with the Activity</inlineHelpText>
    <label>Activity Task Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>