fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alternate Care</fullName>
            </value>
            <value>
                <fullName>Anesthesia</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>Interventional</fullName>
            </value>
            <value>
                <fullName>Interventional Capital</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>