fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to make the record inactive without changing the dates.</inlineHelpText>
    <label>Exception</label>
    <type>Checkbox</type>
</CustomField>