fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking__c/fields/New_Product_Key__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Key__c</fullName>
    <externalId>true</externalId>
    <label>New Product Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>