fullSandbox11072023/force-app/main/default/objects/New_Product_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>